--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "projeto-integrador",
   "version": "1.0.0",
-  "description": "Projeto Integrador para a SAR/UNICAMP em seu parque computacional.",
+  "description": "Projeto Integrador em conjunto com a SAR/Unicamp",
   "main": "index.js",
   "scripts": {
-    "test": "npm test"
+    "test": "npm test",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write \"**/*.{js,json,md}\""
   },
   "repository": {
     "type": "git",
@@ -13,24 +16,24 @@
   "keywords": [
     "tcc",
     "pi",
-    "cotil",
-    "unicamp"
+    "cotil"
   ],
-  "author": "Davie, Neto, Samuel e Júnior",
+  "author": "Davie, Neto, Júnior, Samuel",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/daviesf/projeto-integrador/issues"
   },
   "homepage": "https://github.com/daviesf/projeto-integrador#readme",
   "dependencies": {
-    "axios": "^1.3.1",
-    "chart.js": "^4.2.0",
-    "eslint": "^8.33.0",
-    "formik": "^2.2.9",
-    "jest": "^29.4.1",
-    "stable": "^0.1.8"
+    "@apollo/server": "^4.3.3",
+    "express": "^4.18.2",
+    "graphql": "^16.6.0"
   },
   "devDependencies": {
-    "parcel": "^2.8.3"
+    "@typescript-eslint/eslint-plugin": "^5.51.0",
+    "@typescript-eslint/parser": "^5.51.0",
+    "eslint": "^8.34.0",
+    "eslint-plugin-react": "^7.32.2",
+    "prettier": "^2.8.4"
   }
 }
