--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
   "homepage": "https://github.com/daviesf/projeto-integrador#readme",
   "dependencies": {
     "@apollo/server": "^4.3.3",
+    "apollo-server": "^3.11.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "graphql": "^16.6.0"
+    "graphql": "^16.6.0",
+    "mysql2": "^3.1.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.51.0",
