--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "npm test",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "format": "prettier --write \"**/*.{js,json,md}\""
+    "format": "prettier --write \"**/*.{js,json,md}\"",
+    "dev": "npx nodemon --exec babel-node SarAPI/src/index.js -e js,gql"
   },
   "repository": {
     "type": "git",
@@ -25,19 +26,23 @@
   },
   "homepage": "https://github.com/daviesf/projeto-integrador#readme",
   "dependencies": {
-    "@apollo/server": "^4.3.3",
+    "@graphql-tools/load-files": "^6.6.1",
+    "@graphql-tools/merge": "^8.3.18",
     "apollo-server": "^3.11.1",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2",
     "graphql": "^16.6.0",
+    "graphql-tools": "^8.3.18",
+    "knex": "^2.4.2",
     "mysql2": "^3.1.2"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.51.0",
-    "@typescript-eslint/parser": "^5.51.0",
+    "@babel/cli": "^7.20.7",
+    "@babel/core": "^7.20.12",
+    "@babel/node": "^7.20.7",
+    "@babel/preset-env": "^7.20.2",
     "eslint": "^8.34.0",
     "eslint-plugin-react": "^7.32.2",
-    "prettier": "^2.8.4",
-    "typescript": "^4.9.5"
+    "nodemon": "^2.0.20",
+    "prettier": "^2.8.4"
   }
 }
