--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,9 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write \"**/*.{js,json,md}\"",
-    "dev": "npx nodemon --exec babel-node src/index.js -e js,gql"
+    "dev": "npx nodemon --exec babel-node src/index.js -e js,gql",
+    "build": "babel src -d dist --copy-files --ignore '**/*.gql'",
+    "start": "node dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -33,14 +35,16 @@
     "graphql": "^16.6.0",
     "graphql-tools": "^8.3.18",
     "knex": "^2.4.2",
-    "mysql2": "^3.1.2"
+    "mysql2": "^3.1.2",
+    "pm2": "^5.3.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.20.7",
-    "@babel/core": "^7.20.12",
+    "@babel/cli": "^7.21.5",
+    "@babel/core": "^7.21.5",
     "@babel/node": "^7.20.7",
-    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-env": "^7.21.5",
     "eslint": "^8.34.0",
+    "eslint-plugin-vue": "^9.11.0",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.4"
   }
