--- a/api/package.json
+++ b/api/package.json
@@ -31,6 +31,7 @@
     "@graphql-tools/load-files": "^6.6.1",
     "@graphql-tools/merge": "^8.3.18",
     "apollo-server": "^3.11.1",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
     "graphql-tools": "^8.3.18",
