--- a/web/package.json
+++ b/web/package.json
@@ -9,13 +9,12 @@
     "test:unit": "vitest",
     "test:e2e": "start-server-and-test preview http://localhost:4173 'cypress run --e2e'",
     "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.vue --fix --ignore-path .gitignore --ignore-pattern src/assets/semantic/",
     "format": "prettier --write src/"
   },
   "dependencies": {
     "axios": "^1.4.0",
-    "google-auth-library": "^8.7.0",
-    "pinia": "^2.0.32",
+    "jwt-decode": "^3.1.2",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
@@ -28,7 +27,6 @@
     "eslint": "^8.34.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-vue": "^9.9.0",
-    "jsdom": "^21.1.0",
     "prettier": "^2.8.4",
     "start-server-and-test": "^2.0.0",
     "vite": "^4.1.4",
