--- a/web/package.json
+++ b/web/package.json
@@ -10,7 +10,8 @@
     "test:e2e": "start-server-and-test preview http://localhost:4173 'cypress run --e2e'",
     "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.vue --fix --ignore-path .gitignore --ignore-pattern src/assets/semantic/",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "purgecss": "purgecss --config purgecss.config.js"
   },
   "dependencies": {
     "axios": "^1.4.0",
@@ -29,6 +30,7 @@
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-vue": "^9.9.0",
     "prettier": "^2.8.4",
+    "purgecss": "^5.0.0",
     "start-server-and-test": "^2.0.0",
     "vite": "^4.1.4",
     "vitest": "^0.29.1"
