--- a/api/package.json
+++ b/api/package.json
@@ -35,6 +35,8 @@
     "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
     "graphql-tools": "^8.3.18",
+    "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^3.1.2",
     "knex": "^2.4.2",
     "mysql2": "^3.1.2",
     "pm2": "^5.3.0"
