--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
     "pinia": "^2.0.35",
     "vue": "^3.2.47",
