--- a/web/package.json
+++ b/web/package.json
@@ -10,7 +10,7 @@
     "test:e2e": "start-server-and-test preview http://localhost:4173 'cypress run --e2e'",
     "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.vue --fix --ignore-path .gitignore --ignore-pattern src/assets/semantic/",
-    "format": "prettier --write src/",
+    "format": "prettier --write src/ --ignore-pattern src/assets/semantic/",
     "purgecss": "purgecss --config purgecss.config.js"
   },
   "dependencies": {
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
     "pinia": "^2.0.35",
+    "sweetalert2": "^11.6.13",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
