--- a/web/package.json
+++ b/web/package.json
@@ -21,7 +21,8 @@
     "pinia": "^2.0.35",
     "sweetalert2": "^11.6.13",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue-sweetalert2": "^5.0.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
