--- a/web/package.json
+++ b/web/package.json
@@ -15,9 +15,11 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "express": "^4.18.2",
     "gsap": "^3.11.5",
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
+    "multer": "^1.4.5-lts.1",
     "pinia": "^2.0.35",
     "sweetalert2": "^11.6.13",
     "vue": "^3.2.47",
