--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "purgecss": "purgecss --config purgecss.config.js"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "axios": "^1.4.0",
     "express": "^4.18.2",
     "gsap": "^3.11.5",
